--- a/index.html
+++ b/index.html
@@ -11,8 +11,22 @@
 </head>
 <body>
    <header>
-
-   </header>
+     <div class="intro-part">
+        <div class="intro-info">
+            <h1 class="intro-title">Let's make<br>
+             beautiful flowers a<br>
+             part of your life.
+             </h1>
+             <p class="intro-des">It is a long established fact that a reader will be distracted by the readable<br>
+                 content of a page when looking at its layout. The point of using Lorem Ipsum is<br>
+                 that it has a more-or-less normal distribution of letters.</p>
+                 <button class="btn">Shop Now</button>
+          </div>
+          <div class="intro-img">
+           <img class="intro-part-img" src="./Flower Asset/pngwing 10.png" alt="">
+          </div>
+     </div>
+  </header>
    <main>
 
    </main> 
