done the flower section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,29 @@
      </div>
   </header>
    <main>
-
+   <section>
+    <div class="features-flower-container">
+        <h2 class="feature-title">Our Featured Flowers</h2>
+        <p class="feature-des">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+        <div class="flower-image-boxes">
+            <div class="flower-image-box1">
+              <img class="flower" src="./Flower Asset/pngwing 6.png" alt="">
+            </div>
+            <div class="flower-image-box2">
+             <img class="flower" src="./Flower Asset/pngwing 5.png" alt="">
+            </div>
+            <div class="flower-image-box3">
+            <img class="flower" src="./Flower Asset/pngwing 7.png" alt="">
+            </div>
+        </div>
+        <div class="flower-name">
+            <li>Pink Flower Tree</li>
+            <li>Pink Flower Tree</li>
+            <li>Pink Flower Tree</li>
+        </div>
+       
+    </div>
+   </section>
    </main> 
    <footer>
 
