completed the hot deal section and added comments

--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
        
     </div>
    </section>
+   <section>
+    <div class="hot-deal-container">
+        <div class="hot-deal-text">
+         <h1 class="hot-deal-title">Hot Deal ! Sale Up To 25%
+            <span class="off-part">Off</span></h1>
+         <p class="hot-deal-des">It is a long established fact that a reader will be distracted by the readable<br>
+            content of a page when looking at its layout.</p>
+         <button class="btn">Sign Up</button>
+        </div>
+        <div class="hot-deal-img">
+          <img class="rose" src="./Flower Asset/pngwing 8.png" alt="">
+        </div>
+    </div>
+   </section>
    </main> 
    <footer>
 
