done the social link section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- This is a intro part -->
    <header>
      <div class="intro-part">
         <div class="intro-info">
@@ -28,6 +29,7 @@
      </div>
   </header>
    <main>
+    <!-- this is a feature item section -->
    <section>
     <div class="features-flower-container">
         <h2 class="feature-title">Our Featured Flowers</h2>
@@ -51,6 +53,7 @@
        
     </div>
    </section>
+   <!-- this is a hot deal section -->
    <section>
     <div class="hot-deal-container">
         <div class="hot-deal-text">
@@ -63,6 +66,20 @@
         <div class="hot-deal-img">
           <img class="rose" src="./Flower Asset/pngwing 8.png" alt="">
         </div>
+    </div>
+   </section>
+   <!-- this is a social link section -->
+   <section>
+    <div class="social-sites-container">
+        <h1 class="feature-title">Instragram</h1>
+        <p class="feature-des social-des">It is a long established fact that a reader will be distracted by the readable<br>
+            content of a page when looking at its layout.</p>
+            <div class="more-flower-img">
+                <img class="more-flower" src="./Flower Asset/Flower 01.png" alt="">
+                <img class="more-flower" src="./Flower Asset/Rectangle 4.png" alt="">
+                <img class="more-flower" src="./Flower Asset/Rectangle 5.png" alt="">
+                <img class="more-flower" src="./Flower Asset/Rectangle 6.png" alt="">
+            </div>
     </div>
    </section>
    </main> 
