completed the subscribe section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,31 @@
             </div>
     </div>
    </section>
+   <!-- subscribe section -->
+   <section>
+    <div class="subscribe-container">
+        <h1 class="feature-title subscribe-title">Get The Latest Deals</h1>
+        <p class="feature-des subscribe-info">$30 coupon for first shopping</p>
+        <div class="subcribe-input-field">
+            <input type="email" name="" id="" placeholder="Enter your email here....">
+            <button class="btn">Subscribe</button>
+        </div>
+    </div>
+   </section>
+   <!-- this customer section -->
+   <section>
+    <div class="customer">
+        <h1 class="feature-title">Our Happy Customers</h1>
+        <div class="customer-list-container">
+        <div class="customer">
+        <img src="" alt="">
+          </div>
+       </div>
+    </div>
+    
+</section>
+   
+   
    </main> 
    <footer>
 
