customer section created

--- a/index.html
+++ b/index.html
@@ -97,10 +97,18 @@
    <section>
     <div class="customer">
         <h1 class="feature-title">Our Happy Customers</h1>
+         <p class="feature-des subscribe-info">It is a long established fact that a reader will be distracted by the readable<br>
+            content of a page when looking at its layout.</p>
         <div class="customer-list-container">
         <div class="customer">
-        <img src="" alt="">
+        <img class="customer-img" src="./Flower Asset/istockphoto-1366715815-170667a.webp" alt="">
           </div>
+          <div class="customer">
+            <img class="customer-img" src="./Flower Asset/istockphoto-1409763614-170667a.webp" alt="">
+              </div>
+              <div class="customer">
+                <img class="customer-img" src="./Flower Asset/istockphoto-1459110174-170667a.webp" alt="">
+                  </div>
        </div>
     </div>
     
