--- a/index.html
+++ b/index.html
@@ -113,11 +113,13 @@
     </div>
     
 </section>
-   
-   
    </main> 
+   <!-- this footer section -->
    <footer>
-
+   <h1 class="footer-title"><span class="off-part">Flower</span>Shop</h1>
+   <p class="footer-des">It is a long established fact that a reader will be distracted by the readable<br>
+    content of a page when looking at its layout.</p>
+    <p class="footer-copyright"><small>@2020-2023, FlowerShop.com. All rights reserved.</small></p>
    </footer>
 </body>
 </html>
